cabal-version: 3.0
name:          representable-fd
version:       0.1
synopsis:      Representable functors FunctionalDependencies variant.
category:      Data
description:
  Representable functors, a @FunctionalDependencies@ variant.

  @
  class Functor f => Representable i f | f -> i where
  \    index    :: f a -> i -> a
  \    tabulate :: (i -> a) -> f a
  @

homepage:      https://github.com/phadej/representable-fd
bug-reports:   https://github.com/phadej/representable-fd/issues
license:       BSD-3-Clause
license-file:  LICENSE
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Oleg.Grenrus <oleg.grenrus@iki.fi>
copyright:     (c) 2023 Oleg Grenrus
build-type:    Simple
tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.7
   || ==9.4.5
   || ==9.6.1

source-repository head
  type:     git
  location: https://github.com/phadej/representable-fd.git

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    Data.Functor.Representable
  build-depends:      base >=4.9 && <4.19
